# python-QMAnalysis

./: .coverage  .gitignore  benzene_copy.xyz  constants.csv  global_constants.csv  globals.csv  inputfile.yaml  inputfile2.yaml  out.csv  out_tuples.csv  pyproject.toml
.github/: copilot-instructions.md
QMAnalysis/: .coverage  README.md  pyproject.toml
QMAnalysis/src/: main.py
QMAnalysis/src/qmanalysis/: containers.py  dataswitch.py  measure.py  xyzreader.py  yamlreader.py
QMAnalysis/tests/: test_xyzreader.py  test_yamlreader.py
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  yaml_format_reference.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  yaml_format_reference.doctree
docs/_build/html/_sources/: yaml_format_reference.rst.txt
docs/_build/html/_static/: documentation_options.js
scripts/: docs_build.py
src/: main.py  makexyz.f
src/qmanalysis/: containers.py  customcalculationrunner.py  dataswitch.py  gaussianoutreader.py  globalconstantsreader.py  measure.py  xyzreader.py  yamlreader.py
tests/: test_containers.py  test_customcalculationrunner.py  test_geometry.py  test_integration.py  test_main.py  test_measure.py  test_xyzreader.py  test_yamlreader.py
tools/: makexyz.py
